force-app/main/default/objects/Indicator_Badge__mdt/fields/Badge_Color__c.field-meta.xml
<CustomField>
    <fullName>Badge_Color__c</fullName>
    <description>HTML Color name for badge background color</description>
    <label>Badge Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DeepPink</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>DeepSkyBlue</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>LimeGreen</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Tomato</fullName>
            </value>
            <value>
                <fullName>Turquoise</fullName>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>YellowGreen</fullName>
            </value>
            <value>
                <fullName>RosyBrown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>