force-app/main/default/objects/Indicator_Badge__mdt/fields/Related_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Field__c</fullName>
    <description>Field associated with indicator</description>
    <label>Related Field</label>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Indicator_Badges</relationshipLabel>
    <relationshipName>Indicator_Badges</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>